<resources>
    <string name="app_name">Chargers Tickets</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="my_orders">My Orders</string>
    <string name="chargers_tickets">Chargers Tickets</string>
    <string name="schedule">Schedule</string>
    <string name="select_seats">Select Seats</string>
    <string name="order">Order</string>
    <string name="order_id">Order #%d</string>
    <string name="ticket_id">Order #%d</string>
    <string name="team_at_team">%1$s @ %2$s</string>
    <string name="game_heading">Week %1$d - %2$s</string>
    <string name="bye">BYE</string>
    <string name="hello_blank_fragment">HI</string>
    <string name="all">All</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
</resources>