<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.chargerstickets.HomeFragment"
        android:label="@string/chargers_tickets"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_scheduleFragment"
            app:destination="@id/scheduleFragment" />
        <action
            android:id="@+id/action_homeFragment_to_myOrdersFragment"
            app:destination="@id/myOrdersFragment" />
    </fragment>
    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.example.chargerstickets.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule">
        <action
            android:id="@+id/action_scheduleFragment_to_seatsFragment"
            app:destination="@id/seatsFragment" />
    </fragment>
    <fragment
        android:id="@+id/seatsFragment"
        android:name="com.example.chargerstickets.SeatsFragment"
        android:label="@string/select_seats"
        tools:layout="@layout/fragment_seats">
        <action
            android:id="@+id/action_seatsFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
        <action
            android:id="@+id/action_seatsFragment_to_scheduleFragment"
            app:destination="@id/scheduleFragment"
            app:popUpTo="@id/scheduleFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.example.chargerstickets.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_orderFragment_to_scheduleFragment"
            app:destination="@id/scheduleFragment"
            app:popUpTo="@id/scheduleFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/myOrdersFragment"
        android:name="com.example.chargerstickets.MyOrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_orders">
        <action
            android:id="@+id/action_myOrdersFragment_to_myOrderDetailFragment"
            app:destination="@id/myOrderDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/myOrderDetailFragment"
        android:name="com.example.chargerstickets.MyOrderDetailFragment"
        android:label="{orderLabel}"
        tools:layout="@layout/fragment_my_order_detail">
        <action
            android:id="@+id/action_myOrderDetailFragment_to_ticketDetailFragment"
            app:destination="@id/ticketDetailFragment" />
        <argument
            android:name="orderId"
            android:defaultValue="5"
            app:argType="integer" />
        <argument
            android:name="orderLabel"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/ticketDetailFragment"
        android:name="com.example.chargerstickets.TicketDetailFragment"
        android:label="{ticketLabel}"
        tools:layout="@layout/fragment_ticket_detail">
        <argument
            android:name="ticketId"
            android:defaultValue="7"
            app:argType="integer" />
        <argument
            android:name="ticketLabel"
            app:argType="string" />
    </fragment>
</navigation>